# capitolscraper

./: README.md  flake.nix  pyproject.toml
.github/workflows/: pypi.yml
scraper/: __init__.py  trades.py
scraper/trades/: __init__.py  meta.py  stats.py  trades.py
scripts/: download_trade_page.py  running.py
tests/resources/: 01-02-2025_tradepage.txt
tests/scraper/: test_trades.py  test_utils.py
tests/utils/: test_scraperfuncs.py
utils/: __init__.py  scraperfuncs.py
utils/dataclasses/: __init__.py  trade.py
