[project]
name = "capitolscraper"
version = "0.1"
description = "Web scraper for capitoltrades.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "ruff>=0.8.5",
    "types-beautifulsoup4>=4.12.0.20241020",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper/", "utils/"]
